--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Candy Machine UI" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -28,7 +30,7 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
-    <title>|Shapes VOL 2 |</title>
+    <title>Monsta Scientist🧪 | MINT LIVE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
